--- a/index.html
+++ b/index.html
@@ -1,40 +1,136 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/webstorm-icon-logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WS playground</title>
-  <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8">
+  <title>Home Page</title>
 </head>
 <body>
-<header class="logo">
-  <a href="https://www.jetbrains.com/webstorm/">
-    <img src="/webstorm-logo.svg" alt="WebStorm logo" width="344"
-         height="90">
-  </a>
-</header>
-<main id="app">
-  <h1 class="title">
-    Thank you for trying it out. <br /> Your first project is up and running
-    now.
-  </h1>
-  <section class="counter">
-    <div class="counter-info">
-      <p class="counter-text">Counter is</p>
-      <p class="counter-value" id="counter-value"></p>
-    </div>
-    <div class="counter-interaction">
-      <button id="increaseByOne" type="button">+1</button>
-      <button id="increaseByTwo" type="button">+2</button>
-      <button id="decreaseByOne" type="button">-1</button>
-      <button id="decreaseByTwo" type="button">-2</button>
-    </div>
-  </section>
-</main>
-<footer class="technologies">
-  <img src="/technologies.svg" alt="List of supported technologies">
-</footer>
-<script type="module" src="/src/main.js"></script>
+  <h1>Dilnoza</h1>
+  <h2>Beginner-Level HTML Exercise</h2>
+  <ul>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise1.html">Exercise1</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise2.html">Exercise2</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise3.html">Exercise3</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise4.html">Exercise4</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise 5.html">Exercise5</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise6.html">Exercise6</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise7.html">Exercise7</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise8.html">Exercise8</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise9.html">Exercise9</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise10.html">Exercise10</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise11.html">Exercise11</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise12.html">Exercise12</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise13.html">Exercise13</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise14.html">Exercise14</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise15.html">Exercise15</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise16.html">Exercise16</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise17.html">Exercise17</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise18.html">Exercise18</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise19.html">Exercise19</a>
+    </li>
+    <li>
+      <a href="src/Beginner-Level HTML Exercises/exercise20.html">Exercise20</a>
+    </li>
+  </ul>
+  <h2>Beginner-Level CSS Exercise</h2>
+  <ul>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise1css.html">Exercise1</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise2css.html">Exercise2</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise3css.html">Exercise3</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise4css.html">Exercise4</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise 5css.html">Exercise5</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise6css.html">Exercise6</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise7css.html">Exercise7</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise8css.html">Exercise8</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise9css.html">Exercise9</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise10css.html">Exercise10</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise11css.html">Exercise11</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise12css.html">Exercise12</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise13css.html">Exercise13</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise14css.html">Exercise14</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise15css.html">Exercise15</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise16css.html">Exercise16</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise17css.html">Exercise17</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise18css.html">Exercise18</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise19css.html">Exercise19</a>
+    </li>
+    <li>
+      <a href="src/Beginner Level CSS Exercises/exercise20css.html">Exercise20</a>
+    </li>
+  </ul>
 </body>
 </html>
