--- a/src/Beginner Level CSS Exercises/exercise 5css.html
+++ b/src/Beginner Level CSS Exercises/exercise 5css.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>My First Webpage</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Hello, World!</h1>
-<img src="https://cdn.pixabay.com/photo/2024/04/19/12/13/ai-generated-8706226_640.png"A sample image">
+<p>Click this link to go to <a href="https://www.example.com" target="_blank">Example Website</a>.</p>
 </body>
 </html>
