--- a/index.html
+++ b/index.html
@@ -6,130 +6,134 @@
 </head>
 <body>
   <h1>Dilnoza</h1>
+
   <h2>Beginner-Level HTML Exercise</h2>
+
   <ul>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise1.html">Exercise1</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise1.html">Exercise1</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise2.html">Exercise2</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise2.html">Exercise2</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise3.html">Exercise3</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise3.html">Exercise3</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise4.html">Exercise4</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise4.html">Exercise4</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise 5.html">Exercise5</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise%205.html">Exercise5</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise6.html">Exercise6</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise6.html">Exercise6</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise7.html">Exercise7</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise7.html">Exercise7</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise8.html">Exercise8</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise8.html">Exercise8</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise9.html">Exercise9</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise9.html">Exercise9</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise10.html">Exercise10</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise10.html">Exercise10</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise11.html">Exercise11</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise11.html">Exercise11</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise12.html">Exercise12</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise12.html">Exercise12</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise13.html">Exercise13</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise13.html">Exercise13</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise14.html">Exercise14</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise14.html">Exercise14</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise15.html">Exercise15</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise15.html">Exercise15</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise16.html">Exercise16</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise16.html">Exercise16</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise17.html">Exercise17</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise17.html">Exercise17</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise18.html">Exercise18</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise18.html">Exercise18</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise19.html">Exercise19</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise19.html">Exercise19</a>
     </li>
     <li>
-      <a href="src/Beginner-Level HTML Exercises/exercise20.html">Exercise20</a>
+      <a href="Beginner-Level%20HTML%20Exercises/exercise20.html">Exercise20</a>
     </li>
   </ul>
+
   <h2>Beginner-Level CSS Exercise</h2>
+
   <ul>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise1css.html">Exercise1</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise1css.html">Exercise1</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise2css.html">Exercise2</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise2css.html">Exercise2</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise3css.html">Exercise3</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise3css.html">Exercise3</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise4css.html">Exercise4</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise4css.html">Exercise4</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise 5css.html">Exercise5</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise%205css.html">Exercise5</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise6css.html">Exercise6</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise6css.html">Exercise6</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise7css.html">Exercise7</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise7css.html">Exercise7</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise8css.html">Exercise8</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise8css.html">Exercise8</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise9css.html">Exercise9</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise9css.html">Exercise9</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise10css.html">Exercise10</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise10css.html">Exercise10</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise11css.html">Exercise11</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise11css.html">Exercise11</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise12css.html">Exercise12</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise12css.html">Exercise12</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise13css.html">Exercise13</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise13css.html">Exercise13</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise14css.html">Exercise14</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise14css.html">Exercise14</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise15css.html">Exercise15</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise15css.html">Exercise15</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise16css.html">Exercise16</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise16css.html">Exercise16</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise17css.html">Exercise17</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise17css.html">Exercise17</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise18css.html">Exercise18</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise18css.html">Exercise18</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise19css.html">Exercise19</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise19css.html">Exercise19</a>
     </li>
     <li>
-      <a href="src/Beginner Level CSS Exercises/exercise20css.html">Exercise20</a>
+      <a href="Beginner%20Level%20CSS%20Exercises/exercise20css.html">Exercise20</a>
     </li>
   </ul>
 </body>
