added intermediate level css and html files

--- a/Intermediate Level HTML Exercises/about.html
+++ b/Intermediate Level HTML Exercises/about.html
@@ -9,8 +9,7 @@
 <h1>About Us</h1>
 <nav>
   <a href="exercise1.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
+  <a href="exercise2.html">Contact</a>
 </nav>
 </body>
 </html>
