--- a/Intermediate Level HTML Exercises/exercise1.html
+++ b/Intermediate Level HTML Exercises/exercise1.html
@@ -8,9 +8,8 @@
 <body>
 <h1>Welcome to the Home Page</h1>
 <nav>
-    <a href="exercise1.html">Home</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="exercise2.html">Contact</a>
 </nav>
 
 </body>
