--- a/Intermediate Level HTML Exercises/exercise3.html
+++ b/Intermediate Level HTML Exercises/exercise3.html
@@ -7,7 +7,6 @@
   <style>
     body {
       background-color: white;
-      transition: background-color 0.3s ease;
     }
 
     @media (max-width: 600px) {
@@ -18,6 +17,7 @@
   </style>
 </head>
 <body>
-
+<h1>Welcome to My Page</h1>
+<p>This page changes its background color based on the screen width.</p>
 </body>
 </html>
