connected intermediate html and css with index.html

--- a/index.html
+++ b/index.html
@@ -136,5 +136,142 @@
       <a href="Beginner%20Level%20CSS%20Exercises/exercise20css.html">Exercise20</a>
     </li>
   </ul>
+
+  <h2> Intermediate-Level HTML Exercise</h2>
+
+<ul>
+  <li>
+    <a href="Intermediate Level HTML Exercises/about.html">About</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise1.html">Exercise1</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise2.html">Exercise2</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise3.html">Exercise3</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise4.html">Exercise4</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise5.html">Exercise5</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise6.html">Exercise6</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise7.html">Exercise7</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise8.html">Exercise8</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise9.html">Exercise9</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise10.html">Exercise10</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise11.html">Exercise11</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise12.html">Exercise12</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise13.html">Exercise13</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise14.html">Exercise14</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise15.html">Exercise15</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise16.html">Exercise16</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise17.html">Exercise17</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise18.html">Exercise18</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise19.html">Exercise19</a>
+  </li>
+  <li>
+    <a href="Intermediate Level HTML Exercises/exercise20.html">Exercise20</a>
+  </li>
+</ul>
+
+  <h2> Intermediate-Level CSS Exercise</h2>
+
+<ul>
+  <li>
+    <a href="Intermediate Level CSS Exercises/about.html">About</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise1.html">Exercise1</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise2.html">Exercise2</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise3.html">Exercise3</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise4.html">Exercise4</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise5.html">Exercise5</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise6.html">Exercise6</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise7.html">Exercise7</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise8.html">Exercise8</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise9.html">Exercise9</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise10.html">Exercise10</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise11.html">Exercise11</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise12.html">Exercise12</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise13.html">Exercise13</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise14.html">Exercise14</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise15.html">Exercise15</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise16.html">Exercise16</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise17.html">Exercise17</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise18.html">Exercise18</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise19.html">Exercise19</a>
+  </li>
+  <li>
+    <a href="Intermediate Level CSS Exercises/exercise20.html">Exercise20</a>
+  </li>
+</ul>
+
 </body>
 </html>
