added some features to Intermediate - level css file

--- a/Beginner-Level HTML Exercises/exercise 5.html
+++ b/Beginner-Level HTML Exercises/exercise 5.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Hello, World!</h1>
-<p>Click this link to go to <a href="https://www.example.com" target="_blank">Example Website</a>.</p>
+<p>Click this link to go to <a href="https://ucacoopnaryn.org/" target="_blank">UCA Coop Website</a>.</p>
 </body>
 <a href="../index.html">Home</a>
 </html>
