--- a/Intermediate Level CSS Exercises/exercise1.html
+++ b/Intermediate Level CSS Exercises/exercise1.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Responsive Grid Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Welcome to the Home Page</h1>
-<nav>
-    <a href="about.html">About</a>
-    <a href="exercise2.html">Contact</a>
-</nav>
-
+<section>
+    <h1>Responsive Grid Layout</h1>
+    <div class="grid-container">
+        <div class="grid-item">Item 1</div>
+        <div class="grid-item">Item 2</div>
+        <div class="grid-item">Item 3</div>
+    </div>
+</section>
 </body>
 </html>
