--- a/Intermediate Level CSS Exercises/exercise14.html
+++ b/Intermediate Level CSS Exercises/exercise14.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progress Bar</title>
+  <title>Minion Dropdown Menu</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>Progress Bar Example</h2>
-<progress value="70" max="100"></progress>
-<p>Progress: 70%</p>
-
+<h1>Minion Dropdown Menu</h1>
+<div class="dropdown">
+  <button class="dropbtn">Minions</button>
+  <div class="dropdown-content">
+    <a href="#">Kevin</a>
+    <a href="#">Stuart</a>
+    <a href="#">Bob</a>
+  </div>
+</div>
 </body>
 </html>
