--- a/Intermediate Level CSS Exercises/exercise16.html
+++ b/Intermediate Level CSS Exercises/exercise16.html
@@ -3,82 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harry Potter Fan Page</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 20px;
-            color: #333;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-
-        h2 {
-            font-size: 2em;
-            color: #4CAF50;
-        }
-
-        p {
-            font-size: 1.2em;
-            line-height: 1.5;
-            margin-bottom: 20px;
-        }
-
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Progress Bar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <h1>Welcome to the Harry Potter Fan Page</h1>
-</header>
-
-<main>
-    <h2>About the Series</h2>
-    <p>The *Harry Potter* series, written by J.K. Rowling, follows the journey of a young wizard, Harry Potter, as he discovers his magical heritage and attends Hogwarts School of Witchcraft and Wizardry. The series consists of seven books, detailing Harry's battles against the dark wizard Voldemort.</p>
-    <p>Throughout the series, themes of friendship, bravery, and the struggle between good and evil are explored, captivating readers of all ages.</p>
-
-    <h2>About Harry Potter</h2>
-    <p>Harry Potter is the titular character of the series. Orphaned as a baby, he learns on his 11th birthday that he is a wizard. Harry is known for his distinctive lightning-shaped scar, which he received when Voldemort attempted to kill him.</p>
-    <p>As he navigates the challenges of growing up in a magical world, Harry becomes a symbol of courage and resilience, inspiring those around him to stand up against darkness.</p>
-
-    <h2>Key Characters</h2>
-    <p>Important characters include Hermione Granger, Harry's intelligent and resourceful friend, and Ron Weasley, who is loyal and brave. Together, they face numerous challenges, uncover secrets, and ultimately confront Voldemort.</p>
-</main>
-
-<footer>
-    <p>&copy; 2024 Harry Potter Fan Page</p>
-</footer>
-
+<h1>Progress Bar</h1>
+<div class="progress-container">
+    <div class="progress-bar"></div>
+</div>
 </body>
 </html>
