--- a/Intermediate Level CSS Exercises/exercise4.html
+++ b/Intermediate Level CSS Exercises/exercise4.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube Video Embed</title>
+  <title>CSS Variables Exercise</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Watch My Favorite Video</h1>
-<iframe
-        src="https://www.youtube.com/embed/_RG8hoGMxKw?autoplay=1&controls=1"
-        title="YouTube video player"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-</iframe>
+<h1>Welcome to the Minions Fan Page!</h1>
+<p>Minions are small, yellow, cylindrical creatures with one or two eyes, known for their childlike behavior and their love for bananas.</p>
+<button class="button">Join the Fun!</button>
+<h2>About Minions</h2>
+<p>These little creatures are famous for their silly antics and have captured the hearts of audiences worldwide. They serve the most despicable of villains and are always ready for a laugh!</p>
 </body>
 </html>
