--- a/Intermediate Level CSS Exercises/exercise5.html
+++ b/Intermediate Level CSS Exercises/exercise5.html
@@ -3,25 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Gallery</title>
+  <title>CSS Tooltip Exercise</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Image Gallery</h1>
-<figure>
-  <img src="../img/image2.jpg" alt="Image 1">
-  <figcaption> Bob holding a stuffed bear with a big smile.</figcaption>
-</figure>
-<figure>
-  <img src="../img/image3.jpg" alt="Image 2">
-  <figcaption>Bob, Kevin, and Stuart are standing together, ready for there new mission</figcaption>
-</figure>
-<figure>
-  <img src="../img/image1.jpeg" alt="Image 3">
-  <figcaption>Gru, his daughter, and their loyal Minions ready for their next family adventure!</figcaption>
-</figure>
-<figure>
-  <img src="../img/image4.jpg" alt="Image 4">
-  <figcaption>A mischievous Kevin dressed in prison stripes.</figcaption>
-</figure>
+<h1>Minions Tooltip Example</h1>
+<p>Hover over the word <span class="tooltip">Minions<span class="tooltip-text">Minions are mischievous little yellow creatures!</span></span> to learn more about them.</p>
 </body>
 </html>
