--- a/Intermediate Level CSS Exercises/exercise6.html
+++ b/Intermediate Level CSS Exercises/exercise6.html
@@ -3,17 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minions Dropdown Menu</title>
+  <title>Minions Table Exercise</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<label for="minions">Choose your favorite Minion:</label>
-<select id="minions" name="minions">
-  <option value="kevin">Kevin</option>
-  <option value="stuart">Stuart</option>
-  <option value="bob">Bob</option>
-  <option value="dave">Dave</option>
-</select>
-
+<h1>Minions Favorites</h1>
+<table class="table-striped">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Favorite Color</th>
+    <th>Favorite Food</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>Kevin</td>
+    <td>Yellow</td>
+    <td>Banana</td>
+  </tr>
+  <tr>
+    <td>Stuart</td>
+    <td>Blue</td>
+    <td>Pizza</td>
+  </tr>
+  <tr>
+    <td>Bob</td>
+    <td>Green</td>
+    <td>Chocolate</td>
+  </tr>
+  <tr>
+    <td>Dave</td>
+    <td>Red</td>
+    <td>Ice Cream</td>
+  </tr>
+  <tr>
+    <td>Phil</td>
+    <td>Purple</td>
+    <td>Hot Dog</td>
+  </tr>
+  </tbody>
+</table>
 </body>
 </html>
