--- a/Intermediate Level CSS Exercises/exercise9.html
+++ b/Intermediate Level CSS Exercises/exercise9.html
@@ -3,38 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Table with Caption</title>
+  <title>Exercise 9 - Animate a Button</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<table border="1">
-  <caption>Minions Popularity Chart</caption>
-  <tr>
-    <th>Minion</th>
-    <th>Favorite Activity</th>
-    <th>Popularity Rank</th>
-  </tr>
-  <tr>
-    <td>Kevin</td>
-    <td>Playing Guitar</td>
-    <td>1</td>
-  </tr>
-  <tr>
-    <td>Stuart</td>
-    <td>Video Games</td>
-    <td>2</td>
-  </tr>
-  <tr>
-    <td>Bob</td>
-    <td>Hugging Teddy Bear</td>
-    <td>3</td>
-  </tr>
-  <tr>
-    <td>Dave</td>
-    <td>Cooking</td>
-    <td>4</td>
-  </tr>
-</table>
-
+<h1>Animated Button</h1>
+<p>Hover over the button below to see the animation!</p>
+<button class="animated-button minion-button">Banana!</button>
 </body>
 </html>
