--- a/Intermediate Level CSS Exercises/exercise10.html
+++ b/Intermediate Level CSS Exercises/exercise10.html
@@ -3,25 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Embed Google Map</title>
-  <style>
-    /* Optional: Set the map size */
-    iframe {
-      width: 100%;
-      height: 400px;
-      border: 0;
-    }
-  </style>
+  <title>Minion Sidebar</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>My Favorite Place: Naryn, Kyrgyzstan</h2>
-
-<iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2185.071042635086!2d75.08308231587736!3d41.43091417925881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3896acb1c8c47667%3A0x57f84b528b08d78f!2sNaryn%2C%20Kyrgyzstan!5e0!3m2!1sen!2sus!4v1696033442602!5m2!1sen!2sus"
-        allowfullscreen
-        loading="lazy">
-</iframe>
-
+<h1>Sticky Minion Sidebar</h1>
+<div class="container">
+  <div class="sidebar">
+    <h2>Minion Facts</h2>
+    <ul>
+      <li>Minions love bananas!</li>
+      <li>They are very loyal.</li>
+      <li>Minions have been around since the beginning of time.</li>
+      <li>They speak "Minionese".</li>
+    </ul>
+  </div>
+  <div class="content">
+    <p>Scroll to see the sticky sidebar stay in place while you explore more Minion facts. The Minions have a unique language and are known for their mischievous behavior. Let's learn more about them!</p>
+    <p>Minions are small, yellow creatures who have one or two eyes. They serve the most despicable villains throughout history. They're curious and loyal, but also very clumsy.</p>
+    <p>Scroll down to find out why Minions love bananas!</p>
+  </div>
+</div>
 </body>
 </html>
