--- a/Intermediate Level CSS Exercises/exercise11.html
+++ b/Intermediate Level CSS Exercises/exercise11.html
@@ -3,24 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Layout Using Divs</title>
+    <title>Minion List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="header">
-    <h1>Welcome to My Website</h1>
-    <p>Your one-stop destination for all things Minions!</p>
-</div>
-
-<div class="main">
-    <h2>Main Content Area</h2>
-    <p>This is where the main content will go. You can add articles, images, videos, or anything else you like!</p>
-    <p>Here's a fun fact about Minions: They love bananas!</p>
-</div>
-
-<div class="footer">
-    <p>Footer &copy; 2024</p>
-</div>
-
+<h1>Minion Adventures</h1>
+<ul class="custom-list">
+    <li>Gru's favorite henchmen</li>
+    <li>Love bananas</li>
+    <li>Enjoy mischief</li>
+    <li>Speak Minionese</li>
+</ul>
 </body>
 </html>
