--- a/Intermediate Level CSS Exercises/exercise12.html
+++ b/Intermediate Level CSS Exercises/exercise12.html
@@ -3,42 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantic HTML5 Layout</title>
+    <title>Minion Accordion</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <h1>Welcome to My Minions Website</h1>
-    <p>Your one-stop destination for all things Minions!</p>
-</header>
-
-<nav>
-    <a href="#home">Home</a> |
-    <a href="#about">About</a> |
-    <a href="#minions">Minions</a> |
-    <a href="#contact">Contact</a>
-</nav>
-
-<section>
-    <article>
-        <h2>What are Minions?</h2>
-        <p>Minions are small, yellow, and funny creatures known for their love of bananas and their silly antics. They first appeared in the *Despicable Me* movie series and quickly became fan favorites!</p>
-    </article>
-
-    <article>
-        <h2>Popular Minions</h2>
-        <p>Some of the most popular Minions include Kevin, Stuart, Bob, and Dave. Each Minion has its unique personality and role within the group.</p>
-    </article>
-
-    <article>
-        <h2>Fun Facts about Minions</h2>
-        <p>Did you know that Minions speak their language called "Minionese," which is a mix of various languages and gibberish? Their love for bananas is a constant theme in their adventures!</p>
-    </article>
-</section>
-
-<footer>
-    <p>Footer &copy; 2024</p>
-</footer>
-
+<h1>Minion FAQ Accordion</h1>
+<div class="accordion">
+    <h3>Who are the Minions?</h3>
+    <div class="content">
+        <p>Minions are small, yellow, pill-shaped creatures who love serving their master and getting into trouble.</p>
+    </div>
+    <h3>What do they eat?</h3>
+    <div class="content">
+        <p>Minions love bananas and other fruits. Their love for bananas is unmatched!</p>
+    </div>
+    <h3>What language do they speak?</h3>
+    <div class="content">
+        <p>Minions speak "Minionese," a combination of various languages and gibberish.</p>
+    </div>
+</div>
 </body>
 </html>
