--- a/Intermediate Level CSS Exercises/exercise17.html
+++ b/Intermediate Level CSS Exercises/exercise17.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Newsletter Signup</title>
+    <title>CSS Mask</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>Newsletter Signup</h2>
-<form aria-labelledby="newsletterForm">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <button type="submit">Subscribe</button>
-</form>
-
+<h1>Minion Mask</h1>
+<div class="masked-image"></div>
 </body>
 </html>
