--- a/Intermediate Level CSS Exercises/exercise18.html
+++ b/Intermediate Level CSS Exercises/exercise18.html
@@ -3,22 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minions Modal Example</title>
+  <title>Simple CSS Animation</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>Minions Information</h2>
-<button onclick="document.getElementById('myModal').style.display='block'">Open Minions Modal</button>
-
-<div id="myModal" style="display:none; border: 1px solid #ccc; padding: 20px; background-color: #fff;">
-  <div>
-    <h2>About the Minions</h2>
-    <p>Minions are small, yellow, cylindrical creatures with one or two eyes. They are known for their childlike behavior and are always eager to serve their master, usually a villain.</p>
-    <p>They first appeared in the movie *Despicable Me* and later starred in their own movie titled *Minions*.</p>
-    <button onclick="document.getElementById('myModal').style.display='none'">Close</button>
-  </div>
+<h1>Minion Animation</h1>
+<div class="animation-container">
+  <div class="animated-box"></div>
 </div>
-
 </body>
 </html>
-
