--- a/Intermediate Level CSS Exercises/exercise19.html
+++ b/Intermediate Level CSS Exercises/exercise19.html
@@ -3,16 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FontAwesome Icons Example</title>
-  <link rel="stylesheet" hrjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Responsive Typography</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>FontAwesome Icons</h2>
-<p>Here are some icons:</p>
-<i class="fas fa-smile"></i> Happy Icon<br>
-<i class="fas fa-heart"></i> Heart Icon<br>
-<i class="fas fa-star"></i> Star Icon<br>
-
+<h1>Responsive Typography with Minions</h1>
+<p>Minions love bananas! Adjust the size of this text based on your screen size.</p>
 </body>
 </html>
