--- a/Intermediate Level CSS Exercises/exercise2.html
+++ b/Intermediate Level CSS Exercises/exercise2.html
@@ -3,37 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+  <title>Styled Form</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<nav>
-  <a href="exercise1.html">Home</a>
-  <a href="about.html">About</a>
-</nav>
-
-<main>
-  <h1>Contact Us</h1>
-
-  <form action="/submit" method="POST">
+<section>
+  <h1>Styled Form</h1>
+  <form class="styled-form">
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-    <label for="subject">Subject:</label>
-    <input type="text" id="subject" name="subject" required><br>
-
-    <label for="message">Message:</label><br>
-    <textarea id="message" name="message" rows="4" required></textarea><br>
-
-    <button type="submit">Send</button>
+    <button type="submit">Submit</button>
   </form>
-</main>
-
-
-
+</section>
 </body>
 </html>
