--- a/Intermediate Level CSS Exercises/exercise3.html
+++ b/Intermediate Level CSS Exercises/exercise3.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Media Queries Example</title>
-  <style>
-    body {
-      background-color: white;
-    }
-
-    @media (max-width: 600px) {
-      body {
-        background-color: lightblue;
-      }
-    }
-  </style>
+  <title>Flexbox Navigation Bar</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Welcome to My Page</h1>
-<p>This page changes its background color based on the screen width.</p>
+<header>
+  <nav class="navbar">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
 </body>
 </html>
