--- a/Intermediate Level CSS Exercises/exercise8.html
+++ b/Intermediate Level CSS Exercises/exercise8.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Embed Audio with Controls</title>
+  <title>Responsive Image Gallery</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>Listen to the Best Song Ever</h2>
-
-<audio controls>
-  <source src="../song.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-
+<section>
+  <h1>Responsive Image Gallery</h1>
+  <div class="gallery">
+    <img src="../img/image1.jpeg" alt="Image 1">
+    <img src="../img/image2.jpg" alt="Image 2">
+    <img src="../img/image3.jpg" alt="Image 3">
+  </div>
+</section>
 </body>
 </html>
