made some changes to style.css

--- a/Intermediate Level CSS Exercises/exercise11.html
+++ b/Intermediate Level CSS Exercises/exercise11.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minion List</title>
+    <title>Exercise 11 - Custom List with Minion Icons</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Minion Adventures</h1>
+
+<h2>Minions' Favorite Foods</h2>
 <ul class="custom-list">
-    <li>Gru's favorite henchmen</li>
-    <li>Love bananas</li>
-    <li>Enjoy mischief</li>
-    <li>Speak Minionese</li>
+    <li>Bananas</li>
+    <li>Ice Cream</li>
+    <li>Pizza</li>
+    <li>Apples</li>
+    <li>Cookies</li>
 </ul>
+
 </body>
 </html>
