--- a/Intermediate Level CSS Exercises/exercise12.html
+++ b/Intermediate Level CSS Exercises/exercise12.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minion Accordion</title>
+    <title>Exercise 12 - Minions Accordion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Minion FAQ Accordion</h1>
+
+<h2>Fun Facts About Minions</h2>
 <div class="accordion">
-    <h3>Who are the Minions?</h3>
+    <h3>Fact 1: What Do Minions Love?</h3>
     <div class="content">
-        <p>Minions are small, yellow, pill-shaped creatures who love serving their master and getting into trouble.</p>
+        <p>Minions absolutely love bananas!</p>
     </div>
-    <h3>What do they eat?</h3>
+
+    <h3>Fact 2: How Many Minions Exist?</h3>
     <div class="content">
-        <p>Minions love bananas and other fruits. Their love for bananas is unmatched!</p>
+        <p>There are about 10,400 minions in the movies.</p>
     </div>
-    <h3>What language do they speak?</h3>
+
+    <h3>Fact 3: Their Unique Language</h3>
     <div class="content">
-        <p>Minions speak "Minionese," a combination of various languages and gibberish.</p>
+        <p>Minions speak a mix of various languages including Spanish, English, and French.</p>
     </div>
 </div>
+
 </body>
 </html>
