--- a/Intermediate Level CSS Exercises/exercise14.html
+++ b/Intermediate Level CSS Exercises/exercise14.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minion Dropdown Menu</title>
+  <title>Exercise 14 - Minions Dropdown</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Minion Dropdown Menu</h1>
+
+<h2>Select Your Favorite Minion</h2>
 <div class="dropdown">
-  <button class="dropbtn">Minions</button>
+  <button class="dropbtn">Choose Minion</button>
   <div class="dropdown-content">
     <a href="#">Kevin</a>
     <a href="#">Stuart</a>
     <a href="#">Bob</a>
   </div>
 </div>
+
 </body>
 </html>
