--- a/Intermediate Level CSS Exercises/exercise17.html
+++ b/Intermediate Level CSS Exercises/exercise17.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Mask</title>
+    <title>Exercise 17 - Minions Image Mask</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Minion Mask</h1>
-<div class="masked-image"></div>
+
+<h2>Minions Masked Image</h2>
+<div class="mask-container">
+    <img src="https://example.com/minion.jpg" alt="Minion" class="masked-image">
+</div>
+
 </body>
 </html>
