--- a/Intermediate Level CSS Exercises/exercise18.html
+++ b/Intermediate Level CSS Exercises/exercise18.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple CSS Animation</title>
+  <title>Exercise 18 - Minions Animation</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Minion Animation</h1>
-<div class="animation-container">
-  <div class="animated-box"></div>
-</div>
+
+<h2>Watch the Minion Move!</h2>
+<div class="minion-animation">Minion</div>
+
 </body>
 </html>
