--- a/Intermediate Level CSS Exercises/exercise19.html
+++ b/Intermediate Level CSS Exercises/exercise19.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Typography</title>
+  <title>Exercise 19 - Minions Typography</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Responsive Typography with Minions</h1>
-<p>Minions love bananas! Adjust the size of this text based on your screen size.</p>
+
+<h2>Minions Typography</h2>
+<p class="minion-text">Hello, we are Minions!</p>
+
 </body>
 </html>
