--- a/Intermediate Level CSS Exercises/exercise20.html
+++ b/Intermediate Level CSS Exercises/exercise20.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Custom Checkbox</title>
+  <title>Exercise 20 - Minions Custom Checkbox</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Custom Checkbox</h1>
+
+<h2>Minions Custom Checkbox</h2>
 <label class="custom-checkbox">
   <input type="checkbox">
   <span class="checkmark"></span>
   I love Minions!
 </label>
+
 </body>
 </html>
